k8/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wwbot
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wwbot
    spec:
      containers:
      - name: wwbot-container
        image: registry.example.com/wwbot:master
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        ports:
        - name: http
          containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: wwbot
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: wwbot
