k8/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wwbot
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wwbot.example.com
    secretName: wwbot-tls
  rules:
  - host: wwbot.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wwbot
          servicePort: 80
